--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <meta property="og:image" content="aizenpower/aizenpower.png">
   <meta name="twitter:title" content="aizenpower 78% off Discount » Buy Aizen Power male enhancement supplement 78% off official USA.">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
+	<meta name="msvalidate.01" content="6EB8A52E0700404F54BF267EB4D3AE3C" />
   <link rel="shortcut icon" href="aizenpower/favicon-A-1.png" type="image/x-icon">
 
 
