--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="index.html#content4-4">Aizen Power</a>
                     </li><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="index.html#content4-6">How It Works?</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="index.html#content4-2f">Price</a></li></ul>
                 
-                <div class="navbar-buttons mbr-section-btn"><a class="btn btn-warning display-4" href="https://getaizenpower24.com/start/index.php#aff=shiva0303" rel="nofollow"><span class="socicon socicon-bale mbr-iconfont mbr-iconfont-btn" style="font-size: 20px;"></span>ORDER NOW</a></div>
+                <div class="navbar-buttons mbr-section-btn"><a class="btn btn-warning display-4" href="https://aizenpower.github.io" rel="nofollow"><span class="socicon socicon-bale mbr-iconfont mbr-iconfont-btn" style="font-size: 20px;"></span>ORDER NOW</a></div>
             </div>
         </div>
     </nav>
@@ -71,7 +71,7 @@
     <div class="container">
         <div class="row justify-content-center align-items-center">
             <div class="col-12 col-md-6 image-wrapper">
-                <a href="https://getaizenpower24.com/start/index.php#aff=shiva0303" rel="nofollow" class="animate__animated animate__delay-1s animate__fadeInUp"><img src="aizenpower/aizenpower.png" alt="aizenpower" title="aizenpower"></a>
+                <a href="https://aizenpower.github.io" rel="nofollow" class="animate__animated animate__delay-1s animate__fadeInUp"><img src="aizenpower/aizenpower.png" alt="aizenpower" title="aizenpower"></a>
             </div>
             <div class="col-12 col-md">
                 <div class="text-wrapper">
@@ -81,7 +81,7 @@
 
 <br><br>Prioritize your health and safety by speaking with a healthcare provider before beginning Aizen Power or any new supplement regimen, just like you should with any dietary supplement. Medical professionals can provide tailored guidance based on your medical background, prescribed drugs, and personal health objectives.
 					<br><br><strong><u>Try Aizen Power For Over 78% OFF Today!</u><br></strong><br></p>
-                    <div class="mbr-section-btn mt-3"><a class="btn btn-warning display-7 animate__animated animate__delay-1s animate__fadeInUp" href="https://getaizenpower24.com/start/index.php#aff=shiva0303" rel="nofollow"><font face="Moririse2"><br></font>GET A DISCOUNT 78% OFF</a> <a class="btn btn-primary-outline display-7 animate__animated animate__delay-1s animate__fadeInUp" href="https://getaizenpower24.com/start/index.php#aff=shiva0303" rel="nofollow"><span class="mobi-mbri mobi-mbri-arrow-next mbr-iconfont mbr-iconfont-btn" style="font-size: 15px;"></span><font face="Moririse2"><br></font>OFFICIAL WEBSITE</a></div>
+                    <div class="mbr-section-btn mt-3"><a class="btn btn-warning display-7 animate__animated animate__delay-1s animate__fadeInUp" href="https://aizenpower.github.io" rel="nofollow"><font face="Moririse2"><br></font>GET A DISCOUNT 78% OFF</a> <a class="btn btn-primary-outline display-7 animate__animated animate__delay-1s animate__fadeInUp" href="https://aizenpower.github.io" rel="nofollow"><span class="mobi-mbri mobi-mbri-arrow-next mbr-iconfont mbr-iconfont-btn" style="font-size: 15px;"></span><font face="Moririse2"><br></font>OFFICIAL WEBSITE</a></div>
 					
 					<br><br>
 <div class="ratings" itemscope="" itemtype="http://schema.org/AggregateRating" itemprop="aggregateRating">
