--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <meta name="twitter:title" content="aizenpower 78% off Discount » Buy Aizen Power male enhancement supplement 78% off official USA.">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
 	<meta name="msvalidate.01" content="6EB8A52E0700404F54BF267EB4D3AE3C" />
+	<meta name="google-site-verification" content="ld7w1QYRlAGEJQP2qB3LEeGEo3LACDCz5Nq98l_ahC4" />
   <link rel="shortcut icon" href="aizenpower/favicon-A-1.png" type="image/x-icon">
 
 
