--- a/index.html
+++ b/index.html
@@ -28,11 +28,19 @@
   <link rel="stylesheet" href="aizenpower/css.html" as="style" onload="this.onload=null;this.rel=&#39;stylesheet&#39;">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Jost:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&amp;display=swap"></noscript>
   <link rel="preload" as="style" href="aizenpower/mbr-additional.css"><link rel="stylesheet" href="aizenpower/mbr-additional.css" type="text/css">
-  
-  
-  
+ 
   <meta http-equiv="content-language" content="en-us">
 <meta name="keywords" content="aizenpower, buy aizenpower, aizenpower supplement, aizenpower buy, aizenpower official, aizenpower official website, aizenpower USA, aizenpower order, aizenpower price, aizenpower discount, aizenpower sale, aizenpower reviews">
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-8JYJTFB6NK"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-8JYJTFB6NK');
+</script>
+
 </head>
 <body>
   
